State buttons added

--- a/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/UserControls/SpeechRecognitionControl.xaml
+++ b/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/UserControls/SpeechRecognitionControl.xaml
@@ -24,16 +24,22 @@
             <RowDefinition />
             <RowDefinition />
             <RowDefinition />
+            <RowDefinition />
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Style="{StaticResource LabelTextStyle}" Text="Listening State" />
-        <TextBlock Grid.Column="1" Grid.Row="0" Style="{StaticResource ListeningStateTextStyle}" Text="{Binding Path=ListeningState, Converter={StaticResource ListeningStateToTextConverter}, FallbackValue='[Listening State]'}" />
+        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button x:Name="BtnStopListening" Content="Stop Listening" Background="Red" Visibility="{Binding Path=StopListeningButtonVisibility}" Click="BtnStopListening_Click"/>
+            <Button x:Name="BtnStartListening" Content="Start Listening" Background="Green" Visibility="{Binding Path=StartListeningButtonVisibility}" Click="BtnStartListening_Click"/>
+        </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelTextStyle}" Text="Recognised Phrase" />
-        <TextBlock Grid.Column="1" Grid.Row="1" Style="{StaticResource RecognisedTextStyle}" Text="{Binding Path=RecognisedPhrase, FallbackValue='[Recognised Phrase]'}" />
+        <TextBlock Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelTextStyle}" Text="Listening State" />
+        <TextBlock Grid.Column="1" Grid.Row="1" Style="{StaticResource ListeningStateTextStyle}" Text="{Binding Path=ListeningState, Converter={StaticResource ListeningStateToTextConverter}, FallbackValue='[Listening State]'}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelTextStyle}" Text="Action Result" />
-        <TextBlock Grid.Column="1" Grid.Row="2" Style="{StaticResource ActionTextStyle}" Text="{Binding Path=ActionResult, FallbackValue='[Action Result]'}" />
+        <TextBlock Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelTextStyle}" Text="Recognised Phrase" />
+        <TextBlock Grid.Column="1" Grid.Row="2" Style="{StaticResource RecognisedTextStyle}" Text="{Binding Path=RecognisedPhrase, FallbackValue='[Recognised Phrase]'}" />
+
+        <TextBlock Grid.Column="0" Grid.Row="3" Style="{StaticResource LabelTextStyle}" Text="Action Result" />
+        <TextBlock Grid.Column="1" Grid.Row="3" Style="{StaticResource ActionTextStyle}" Text="{Binding Path=ActionResult, FallbackValue='[Action Result]'}" />
 
 
     </Grid>
