--- a/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/MainPage.xaml
+++ b/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/MainPage.xaml
@@ -10,7 +10,7 @@
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}" RequestedTheme="Dark">
         <Grid.RowDefinitions>
-            <RowDefinition Height="0.2*"/>
+            <RowDefinition Height="0.3*"/>
             <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
@@ -21,7 +21,7 @@
 
         <TextBlock Style="{StaticResource PageHeadingStyle}" Text="Heading"/>
 
-        <UserControls:SpeechRecognitionControl x:Name="SpeechRecognitionControl" Grid.Row="1" />
+        <UserControls:SpeechRecognitionControl x:Name="SpeechRecognitionControl" Grid.Row="1" Grid.ColumnSpan="2" />
 
 
     </Grid>
