--- a/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/UserControls/SpeechRecognitionControl.xaml
+++ b/UwpSpeechRecognitionSampleSolution/UwpSpeechRecognitionSample.UwpApplication/UserControls/SpeechRecognitionControl.xaml
@@ -9,38 +9,42 @@
     mc:Ignorable="d"
     d:DesignHeight="200"
     d:DesignWidth="400"
-    Height="200"
+    Height="150"
     Width="400">
+    
     <UserControl.Resources>
         <converters:ListeningStateToTextConverter x:Name="ListeningStateToTextConverter"/>
     </UserControl.Resources>
 
-    <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-            <RowDefinition />
-        </Grid.RowDefinitions>
+    <Border BorderBrush="Gray" BorderThickness="1" CornerRadius="10" Padding="10">
 
-        <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
-            <Button x:Name="BtnStopListening" Content="Stop Listening" Background="Red" Visibility="{Binding Path=StopListeningButtonVisibility}" Click="BtnStopListening_Click"/>
-            <Button x:Name="BtnStartListening" Content="Start Listening" Background="Green" Visibility="{Binding Path=StartListeningButtonVisibility}" Click="BtnStartListening_Click"/>
-        </StackPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelTextStyle}" Text="Listening State" />
-        <TextBlock Grid.Column="1" Grid.Row="1" Style="{StaticResource ListeningStateTextStyle}" Text="{Binding Path=ListeningState, Converter={StaticResource ListeningStateToTextConverter}, FallbackValue='[Listening State]'}" />
+            <StackPanel Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Center">
+                <Button x:Name="BtnStopListening" Content="Stop Listening" Background="Red" Visibility="{Binding Path=StopListeningButtonVisibility}" Click="BtnStopListening_Click"/>
+                <Button x:Name="BtnStartListening" Content="Start Listening" Background="Green" Visibility="{Binding Path=StartListeningButtonVisibility}" Click="BtnStartListening_Click"/>
+            </StackPanel>
 
-        <TextBlock Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelTextStyle}" Text="Recognised Phrase" />
-        <TextBlock Grid.Column="1" Grid.Row="2" Style="{StaticResource RecognisedTextStyle}" Text="{Binding Path=RecognisedPhrase, FallbackValue='[Recognised Phrase]'}" />
+            <TextBlock Grid.Column="0" Grid.Row="1" Style="{StaticResource LabelTextStyle}" Text="Listening State" />
+            <TextBlock Grid.Column="1" Grid.Row="1" Style="{StaticResource ListeningStateTextStyle}" Text="{Binding Path=ListeningState, Converter={StaticResource ListeningStateToTextConverter}, FallbackValue='[Listening State]'}" />
 
-        <TextBlock Grid.Column="0" Grid.Row="3" Style="{StaticResource LabelTextStyle}" Text="Action Result" />
-        <TextBlock Grid.Column="1" Grid.Row="3" Style="{StaticResource ActionTextStyle}" Text="{Binding Path=ActionResult, FallbackValue='[Action Result]'}" />
+            <TextBlock Grid.Column="0" Grid.Row="2" Style="{StaticResource LabelTextStyle}" Text="Recognised Phrase" />
+            <TextBlock Grid.Column="1" Grid.Row="2" Style="{StaticResource RecognisedTextStyle}" Text="{Binding Path=RecognisedPhrase, FallbackValue='[Recognised Phrase]'}" />
 
+            <TextBlock Grid.Column="0" Grid.Row="3" Style="{StaticResource LabelTextStyle}" Text="Action Result" />
+            <TextBlock Grid.Column="1" Grid.Row="3" Style="{StaticResource ActionTextStyle}" Text="{Binding Path=ActionResult, FallbackValue='[Action Result]'}" />
 
-    </Grid>
+        </Grid>
+
+    </Border>
 </UserControl>
